menu commit